# aos8-mcp-server

./: .gitignore  README.en.md  README.md  aos8.devices.example.yaml  pyproject.toml
aos8_mcp/: __init__.py  __main__.py  aruba_client.py  cache.py  devices_config.py  log_analyze.py  log_store.py  normalize.py  server.py  session_store.py  show_registry.py  syslog_catalog.py  truncate.py
aos8_mcp/data/: ArubaOS-8.10.0.0-Syslog-Reference-Guide.xlsx  syslog_catalog.json
data/: .gitignore
data/log_summaries/: 20260516T155141_10.0.0.1_e2895ab511e0_security.json  20260516T164736_10.0.50.11_518170b0ca63_log.json  20260516T164755_10.0.50.11_5539775ae7a7_log.json  20260516T164825_10.0.50.11_474ddf392d7c_log.json  20260516T164832_10.0.50.11_c44f01afb389_log.json  20260516T164902_10.0.50.11_9803a75d94d8_log.json
scripts/: aos8-mcp.service.example  build_syslog_catalog.py  start-aos8-mcp.sh
systemd/: aos8-mcp.service
tests/: test_aaa_compose.py  test_airmatch_compose.py  test_ap_diagnose.py  test_aruba_client.py  test_cache.py  test_datapath_helpers.py  test_log_analyze.py  test_log_store.py  test_log_tool.py  test_normalize.py  test_session_md_ip.py  test_session_reaper.py  test_show_registry.py  test_truncate.py
