[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aos8-mcp-server"
version = "0.1.0"
description = "MCP server for Aruba AOS 8.x (show API via Mobility Master / MD)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
aos8-mcp-server = "aos8_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["aos8_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
